--- a/kids/leemos-juntos.html
+++ b/kids/leemos-juntos.html
@@ -31,7 +31,7 @@
                         <canvas id="colors_sketch" class="all clearfix" height="450"></canvas>
                         <a href="#colors_sketch" data-download="png" style="float: center; width: 100px;">Siguiente</a>
                         <script type="text/javascript">
-                            $("#contentappkids").css("background-image","url('images/kids/fondo.png')");              
+                            $("#contentappkids").css("background-image","url('images/kids/fondo.jpg')");              
                             $("#robot-salir").click(function(){
                             //alert("pepe");
                                 
