--- a/okapi-games.html
+++ b/okapi-games.html
@@ -47,7 +47,7 @@
                     </nav>
                         </div>  
                     <a href="inicio-profe.html">
-                    <h1 class="demo-logo clearfix">
+                    <h1 class="demo-logo clearfix" id="logo-fondo">
                       <img src="images/todo/alec.png" class="logo-img  pull-left" />
                       <!--<img src="images/todo/leo-v.svg" class="logo-img  pull-left"/>-->
                       <!--<span class="leo pull-left">
