--- a/inicio-alumno.html
+++ b/inicio-alumno.html
@@ -60,6 +60,7 @@
                     <div class="atril"></div>
                     <div class="lamp"></div> 
                     <div class="leamos"></div>
+                    <div class="camara"></div>
                     <div class="continuaelcuento"></div>
                     <div class="dibujalahistoria"></div>
                     <div id="cartel"></div>
@@ -115,6 +116,9 @@
         })
         $(".lamp").hover(function(){
             $(this).toggleClass("lampmove");
+        });
+        $(".camara").hover(function(){
+            $(this).toggleClass("camaramove");
         });
         //go to app
         $(".leamos").click(function(){
