--- a/kids/continua-historia.html
+++ b/kids/continua-historia.html
@@ -17,8 +17,8 @@
                     
 
                     </div>
-                        
-                        <canvas id="video_sketch" data-v-1-src="kids/videos/video.png" class="all clearfix" height="396">
+                        <!-- add data for background according to las frame of video-->
+                        <canvas id="video_sketch" data-imgvid-src="../kids/videos/video.png" class="all clearfix" height="396">
                         </canvas>
                         <a href="#video_sketch" data-download="png" style="float: center; width: 100px;">Siguiente</a>
                         </article>  
