--- a/contenido/lectura-colectiva.html
+++ b/contenido/lectura-colectiva.html
@@ -8,7 +8,7 @@
                           <div class="tab-pane  active" id="mywork">
                             <article class="prettyprint">
                                 <header class="clearfix">
-                                <h3 class="titulo-cuentos">La Codicia-> select.html</h3>
+                                <h3 class="titulo-cuentos">Los 3 chanchitos</h3>
                                 <small class="btn  btn-default btn-xs color-blanco " id="lectura-1">Vista Previa</small>&nbsp;
                                 <small class="btn  btn-default btn-xs color-blanco " id="asignar-lectura-1">Asignar</small>
                                 </header>
@@ -16,7 +16,7 @@
                             </article>
                             <article class="prettyprint">
                                 <header class="clearfix">
-                                <h3 class="titulo-cuentos">La Codicia->select.html</h3>
+                                <h3 class="titulo-cuentos">La Caperucita Roja</h3>
                                 <small class="btn  btn-default btn-xs color-blanco " id="lectura-1">Vista Previa</small>&nbsp;
                                 <small class="btn  btn-default btn-xs color-blanco " id="asignar-lectura-1">Asignar</small>
                                 </header>
@@ -24,7 +24,7 @@
                             </article>
                             <article class="prettyprint">
                                 <header class="clearfix">
-                                <h3 class="titulo-cuentos">La Codicia->select.html</h3>
+                                <h3 class="titulo-cuentos">Pedro y Pablo</h3>
                                 <small class="btn  btn-default btn-xs color-blanco " id="lectura-1">Vista Previa</small>&nbsp;
                                 <small class="btn  btn-default btn-xs color-blanco " id="asignar-lectura-1">Asignar</small>
                                 </header>
