--- a/kids/dibujamos-historia.html
+++ b/kids/dibujamos-historia.html
@@ -61,7 +61,7 @@
                         if(this != 11){  
                         $('#paleta').append("<a href='#colors_sketch' data-size='" + this + "'><img class='colore-paleta' src='images/kids/paleta-"+this+".png' /></a>");
                         }else{
-                            $('#paleta').append("<a href='#colors_sketch' data-color='fff'><img class='colore-paleta' src='images/kids/paleta-fff.png' /></a>");       
+                            $('#paleta').append("<a href='#colors_sketch' data-color='#fff'><img class='colore-paleta' src='images/kids/paleta-fff.png' /></a>");       
                         }
                                
                                
