--- a/inicio-profe.html
+++ b/inicio-profe.html
@@ -46,7 +46,7 @@
 
                     </nav>
                         </div>  
-                    <a href="inicio-profe.html">
+                    <a href="index.html">
                     <h1 class="demo-logo clearfix" id="logo-fondo">
                       <img src="images/todo/alec.png" class="logo-img  pull-left" />
                       <!--<img src="images/todo/leo-v.svg" class="logo-img  pull-left"/>-->
