--- a/contenido/cursos-profe.html
+++ b/contenido/cursos-profe.html
@@ -198,6 +198,19 @@
                       </div>
                       <div class="tab-pane" id="agregar-nuevo-curso">
                             <article class="prettyprint">
+                            <div class="dropdown col-md-6">
+                           <button class="btn btn-primary dropdown-toggle  all" data-toggle="dropdown" id="colegio">Colegio
+                                        <span class="caret"></span>
+                                    </button>
+                                      <span class="dropdown-arrow dropdown-arrow-inverse"></span>
+                                          <ul class="dropdown-menu dropdown-inverse" classs="curco">
+                                            <li id="co-1" class="prev-e">Colegio San Jorge</li>
+                                            <li id="co-2" class="prev-e">Colegio Extremadura</li>
+                                            <li id="co-3" class="prev-e">Colegio San Pepe></li>
+                                          </ul>
+                            </div>
+                                
+                                
                                 <form role="form" id="agregarcursoform">
                                     <label for="InputName">Nombre del Curso</label>
                                     <input type="email" class="form-control form-group" id="InputName" placeholder="1A">
