--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -91,27 +91,41 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">
-          Collapsible Group Item #1
+                 Como ingreso un curso
         </a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
+
+    1.- ingresa a Mis Cursos<br>
+
+    2.- Luego diríjase a la pestaña “Agregar Curso”, ingrese los datos que se piden.<br>
+
+        seleccione el colegio al cual pertenezca el curso, finalmente haga click en “Agregar Curso”.<br>
+
+       *Si el colegio no esta ingresado:<br>
+
+      - Ingrese a la pestaña “Agregar Colegio”, ingrese los datos, y haga click en “Agregar colegio”.
+
+        </div>
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">
-          Collapsible Group Item #2
+        Como asignar una tarea a un alumno
         </a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+
+          1.- ingrese a Tareas. <br>
+
+          2.- Seleccione alguna de las opciones, luego dentro de Mis Tareas, escoja que cuento quiere asignar, haga click en el boton “asignar”, indique el curso y alumno y confirme en “enviar”.
+ 
       </div>
     </div>
   </div>
@@ -119,13 +133,15 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">
-          Collapsible Group Item #3
+       Como eliminar Cursos
         </a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        1.- ingresa a Mis Cursos<br>
+        2.- Seleccione el colegio al cual pertenezca el curso.<br>
+        3.- Presione el icono de basurero para eliminar el curso que desea. 
       </div>
     </div>
   </div>
